tests/testerina-integration-test/src/test/resources/command-outputs/windows/InvalidFunctionMockingTestCase-testMockingWithoutAnnotationRecord.txt
Compiling source
	intg_tests/recordless_annot_function_mock:0.1.0
ERROR [tests\test.bal:(3:1,3:11)] missing required 'functionName' field
  |
3 | @test:Mock
  | ^^^^^^^^^^

error: compilation contains errors
